kubernetes/kubernetes/ingress-principal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "test.luis122448.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test-service
            port:
              number: 80
